--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
     </nav>
 
     <!-- Home Section -->
-    <section id="home" class="section bg-blue-800 text-white py-20 text-center">
-        <div class="container mx-auto">
-            <img src="https://via.placeholder.com/150" alt="Profile Photo" class="rounded-full mx-auto mb-4">
-            <h1 class="text-4xl font-bold mb-2">Venkata Sai Badugu</h1>
-            <p class="text-xl mb-4">Industrial Engineer | Automotive Design & Process Optimization</p>
-            <p class="text-lg">Optimizing designs and processes for automotive and manufacturing excellence</p>
-            <a href="#contact" class="mt-6 inline-block bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Get in Touch</a>
+    <section id="home" class="section bg-blue-800 text-white py-20">
+        <div class="container mx-auto flex items-center">
+            <div class="w-1/8 p-2">
+                <img src="profile.jpg" alt="Venkata Sai Badugu Professional Headshot" class="rounded-full w-full max-w-xs">
+            </div>
+            <div class="w-7/8 p-4 text-left">
+                <h1 class="text-4xl font-bold mb-2">Venkata Sai Badugu</h1>
+                <p class="text-xl mb-4">Industrial Engineer | Automotive Design & Process Optimization</p>
+                <p class="text-lg">Optimizing designs and processes for automotive and manufacturing excellence</p>
+                <a href="#contact" class="mt-6 inline-block bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Get in Touch</a>
+            </div>
         </div>
     </section>
 
@@ -98,36 +102,62 @@
                     <h3 class="text-2xl font-semibold mb-2">Industrial Engineer, Procter & Gamble</h3>
                     <p class="text-gray-600 mb-2">Jan 2024 – Present, Cincinnati, OH</p>
                     <ul class="list-disc pl-6 text-gray-700">
-                        <li>Optimized manufacturing processes, reducing waste by 15% through data-driven strategies.</li>
-                        <li>Led Six Sigma and Kaizen initiatives, improving product quality and reducing defects.</li>
-                        <li>Managed supply chain logistics, minimizing lead times and stabilizing inventory.</li>
-                        <li>Developed KPIs to monitor efficiency and drive continuous improvement.</li>
+                        <li>Optimizing manufacturing processes and workflows to improve production efficiency, reduce waste, and
+enhance overall operational performance through data-driven strategies.</li>
+                        <li>Collaborating with cross-functional teams to implement lean manufacturing principles, ensuring streamlined
+operations, cost reduction, and continuous process improvements.</li>
+                        <li>Conducting time and motion studies to analyze production bottlenecks, improve cycle times, and maximize
+workforce productivity by optimizing task sequences.</li>
+                        <li>Leading continuous improvement initiatives using Six Sigma and Kaizen methodologies to enhance product
+quality, reduce defects, and increase process reliability.</li>
+                        <li>Utilizing data analysis and industrial engineering tools to drive process automation, optimize resource
+utilization, and ensure operational excellence across departments.</li>
+                        <li>Performing capacity planning and resource allocation to optimize production schedules, minimize downtime,
+and meet fluctuating market demands efficiently.</li>
+                        <li>Implementing ergonomic improvements in workstations and assembly lines to enhance worker safety,
+reduce fatigue, and increase overall operational efficiency.</li>
+                        <li>Managing supply chain logistics to optimize material flow, reduce lead times, and ensure inventory stability.</li>
+                        <li>Developing KPIs to monitor efficiency, analyze trends, and drive process improvements.</li>
+                        <li>Assisting in prototype testing to validate improvements and ensure compliance.</li>
                     </ul>
-                    <img src="https://via.placeholder.com/300x200?text=Workflow+Chart" alt="Workflow Optimization Chart" class="mt-4 rounded">
+                    <img src="1.webp" alt="Chart 1" class="w-1/2 rounded object-cover">
+                    <img src="2.webp" alt="Chart 2" class="w-1/2 rounded object-cover">
                 </div>
                 <!-- Mahindra And Mahindra -->
                 <div class="project-card bg-gray-50 p-6 rounded-lg shadow-md">
                     <h3 class="text-2xl font-semibold mb-2">Design Engineer, Mahindra And Mahindra</h3>
                     <p class="text-gray-600 mb-2">Aug 2021 – Apr 2023, India</p>
                     <ul class="list-disc pl-6 text-gray-700">
-                        <li>Designed chassis and suspension components, optimizing structural integrity via FEA.</li>
-                        <li>Implemented DFM/DFA principles, reducing production costs through material redesign.</li>
-                        <li>Performed CFD simulations for airflow and thermal efficiency.</li>
-                        <li>Programmed CNC machines for precision machining of components.</li>
+                        <li>Designed and developed chassis and suspension components for commercial and passenger vehicles.</li>
+                        <li>Conducted FEA simulations to optimize structural integrity, weight, and durability of vehicle components.</li>
+                        <li>Collaborated with manufacturing teams to implement DFM and DFA principles for efficient production.</li>
+                        <li>Assisted in cost reduction by optimizing material selection and redesigning components for efficiency.</li>
+                        <li>Created detailed 3D CAD models, 2D drawings, and assemblies while ensuring compliance with standards.</li>
+                        <li>Performed CFD simulations to analyze airflow, thermal performance, and overall component efficiency.</li>
+                        <li>Used PLM tools like Teamcenter and Windchill to manage design data and streamline engineering workflows.</li>
+                        <li>Program and optimize CNC machines using G-code, M-code, and CAD/CAM software for precision machining.</li>
+                        <li>Perform CNC machine setup, tool selection and troubleshooting to ensure optimal performance and quality.</li>
+                        <li>Supported prototype development, validation, & testing to ensure performance & regulatory compliance.</li>
                     </ul>
-                    <img src="https://via.placeholder.com/300x200?text=CAD+Model" alt="Chassis CAD Model" class="mt-4 rounded">
+                    <!-- <img src="https://via.placeholder.com/300x200?text=CAD+Model" alt="Chassis CAD Model" class="mt-4 rounded"> -->
                 </div>
                 <!-- MG Motors -->
                 <div class="project-card bg-gray-50 p-6 rounded-lg shadow-md">
                     <h3 class="text-2xl font-semibold mb-2">Design Engineer, MG Motors</h3>
                     <p class="text-gray-600 mb-2">Jul 2019 – Jul 2021, India</p>
                     <ul class="list-disc pl-6 text-gray-700">
-                        <li>Designed interior/exterior trims and optimized cooling systems for efficiency.</li>
-                        <li>Assisted in DFMEA and tolerance stack-up analysis for component reliability.</li>
-                        <li>Researched additive manufacturing for innovative prototype development.</li>
-                        <li>Supported 3D scanning and reverse engineering for component redesign.</li>
+                        <li>Assisted in designing and developing interior and exterior trims for new vehicle models.</li>
+                        <li>Supported material selection activities to enhance durability and reduce weight.</li>
+                        <li>Helped in optimizing cooling systems for better thermal management and efficiency.</li>
+                        <li>Assisted in 3D scanning and reverse engineering tasks for component redesign.</li>
+                        <li>Performed basic tolerance stack-up analysis under senior engineer guidance.</li>
+                        <li>Created CAD models and technical drawings for automotive parts and assemblies.</li>
+                        <li>Assisted in DFMEA analysis to identify potential design failure points.</li>
+                        <li>Supported prototyping and functional testing of new designs in early stages.</li>
+                        <li>Helped with design reviews and implemented minor engineering changes as needed.</li>
+                        <li>Researched new manufacturing techniques like additive manufacturing for innovation.</li>
                     </ul>
-                    <img src="https://via.placeholder.com/300x200?text=3D+Trim+Model" alt="Interior Trim Model" class="mt-4 rounded">
+                    <!-- <img src="https://via.placeholder.com/300x200?text=3D+Trim+Model" alt="Interior Trim Model" class="mt-4 rounded"> -->
                 </div>
             </div>
         </div>
@@ -140,8 +170,8 @@
             <div class="space-y-4">
                 <div>
                     <h3 class="text-xl font-semibold">Education</h3>
-                    <p class="text-gray-700">Master of Science in Industrial & Human Factors Engineering<br>Wright State University, Dayton, OH</p>
-                    <p class="text-gray-700">Bachelor of Engineering in Mechanical Engineering<br>NRI Institute of Technology, India</p>
+                    <p class="text-gray-700">Master of Science in Industrial & Human Factors Engineering<br><b>Wright State University, Dayton, OH</b></p>
+                    <p class="text-gray-700">Bachelor of Engineering in Mechanical Engineering<br><b>NRI Institute of Technology, India</b></p>
                 </div>
                 <div>
                     <h3 class="text-xl font-semibold">Certifications</h3>
