--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@ reduce fatigue, and increase overall operational efficiency.</li>
                         <li>Managing supply chain logistics to optimize material flow, reduce lead times, and ensure inventory stability.</li>
                         <li>Developing KPIs to monitor efficiency, analyze trends, and drive process improvements.</li>
                         <li>Assisting in prototype testing to validate improvements and ensure compliance.</li>
-                    </ul>
-                    <img src="1.webp" alt="Chart 1" class="w-1/2 rounded object-cover">
-                    <img src="2.webp" alt="Chart 2" class="w-1/2 rounded object-cover">
+                    <div class="flex flex-col md:flex-row gap-4">
+                     <img src="1.webp" alt="Chart 1" class="w-full md:w-1/2 rounded object-cover">
+                     <img src="2.webp" alt="Chart 2" class="w-full md:w-1/2 rounded object-cover">
+                    </div>
                 </div>
                 <!-- Mahindra And Mahindra -->
                 <div class="project-card bg-gray-50 p-6 rounded-lg shadow-md">
